--- a/NCLHv1 analysis.ipynb
+++ b/NCLHv1 analysis.ipynb
@@ -5102,7 +5102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Revenue prior to the cruise industry shutdown was between one and two billion dollars per quarter (depending on the season), with revenue in the third quarter of 2019 at about 2 billion dollars. Advance ticket sales were running just under about two billion per quarter. Since the restart of cruise, advanced ticket sales (which include future cruise credits) have returned to pre pandemic levels. Cruise line operating expenses were about one billion dollars per quarter and have returned to pre-pandemic levels as the full fleet is back online. During the current quarter revenue has exceeded operating expenses, a positive indicator. Operating income has increased during the current quarter. "
+    "Revenue prior to the cruise industry shutdown was between one and two billion dollars per quarter (depending on the season), with revenue in the third quarter of 2019 at about 2 billion dollars. Advance ticket sales were running just under about two billion per quarter. Since the restart of cruise, advanced ticket sales (which include future cruise credits) have returned to pre-pandemic levels. Cruise line operating expenses were about one billion dollars per quarter and have returned to pre-pandemic levels as the full fleet is back online. During the current quarter revenue has exceeded operating expenses, a positive indicator. Operating income has increased during the current quarter. "
    ]
   },
   {
@@ -6173,7 +6173,7 @@
     "- Dividend payout: NCLH provides a shareholder benefit which provides \\\\$100 of onboard credit for a 7 night cruise and \\\\$250 onboard credit per stateroom on sailings of 15 days or more. Shareholder benefit cash flow IRR is negative.\n",
     "- Management performance: Financial metrics such as liabilities to assets and return on investment were calculated. These don't have much meaning at this point in the company's history since the pandemic followed by a recession is looking like it will be a fatal blow to the industry. What we see now is a company on life support, getting massive infusions of debt and a continued negative earnings which is trending in the wrong direction. \n",
     "\n",
-    "Concerns: D/E approaching 10, negative earnings, short term debt payments unsupportable with projected cash flow.\n",
+    "Concerns: D/E above 10, and negative earnings.\n",
     "\n",
     "Summary: The pandemic followed by a recession is looking like it will be a fatal blow to the industry. The company is on live support, getting massive infusions of debt and continued negative earnings trend that cannot support near term debt payments. \n",
     "\n",
